create private-route and hide authenticated pages and vice-versa

--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -1,6 +1,6 @@
 .nav {
     display: flex;
-    background: #33007b;
+    background: #e14507;
     padding: 10px 20px;
     align-items: center;
     justify-content: space-between;
