implemented searchUser Functioanlity and liking a post(doesnot autorender coz of API lack of functionality)

--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -70,6 +70,9 @@
     display: flex;
     align-items: center;
   }
+  .postLike>button{
+    border:none;
+  }
   .postCommentsIcon {
     margin-left: 15px;
     display: flex;
