--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -232,7 +232,7 @@
     height: 42px;
     left: 111.5px;
     top: 0px;
-    background: #ef7917;
+    background: #008060;
     border-radius: 3px;
     color: #fff;
     font-size: 16px;
