--- a/src/styles/login.module.css
+++ b/src/styles/login.module.css
@@ -28,6 +28,7 @@
     margin-top: 20px;
     padding: 5px;
     font-size: 15px;
+    background: #e4e9e8;
   }
   .field input:focus {
     outline: none;
@@ -35,7 +36,7 @@
   .field button {
     width: 100%;
     margin-top: 20px;
-    background: #ef7917;
+    background: #008060;
     border-radius: 25px;
     color: #fff;
     font-size: 20px;
