--- a/src/styles/settings.module.css
+++ b/src/styles/settings.module.css
@@ -1,7 +1,7 @@
 .settings {
     display: block;
     flex-direction: column;
-    background: #fff;
+    background: rgb(255, 255, 255);
     padding: 30px;
     border-radius: 6px;
     margin: 0 auto;
