background and minor style tweeks

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,7 +6,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color:#ccc2c2;
-  background-image: url('https://img.freepik.com/free-vector/halftone-background-with-circles_23-2148907689.jpg?t=st=1655294259~exp=1655294859~hmac=7252ad4ce4e0f40c05ba9dd6c6a45673c2112cacaa31ca9ac186cd94ab8d1f71&w=900');
+  background-image: url('https://img.freepik.com/free-photo/abstract-smoke-wallpaper-background-desktop_53876-128257.jpg?t=st=1655351692~exp=1655352292~hmac=0cb15c4525f400d63402625aa008f6bf3e5c72e82df69383f49428f88bd5d713&w=900');
+  background-size: cover;
 }
 
 code {
