--- a/src/styles/login.module.css
+++ b/src/styles/login.module.css
@@ -1,7 +1,7 @@
 .loginSignupHeader {
     font-weight: 600;
     font-size: 30px;
-    color: #ef7917;
+    color: #008060;
   }
   .loginForm {
     background-color: #fff;
