--- a/src/styles/welcome.module.css
+++ b/src/styles/welcome.module.css
@@ -12,7 +12,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 30%;
+    width: 50%;
     margin: 150px auto;
     border-radius: 19px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
@@ -22,4 +22,46 @@
     font-size: 20px;
     color: rgb(229, 74, 8);
   }
+  .welcome>img{
+    background-size:contain;
+    border-radius: 50%;
+    height: 100px;
+    width: 100px;
+  }
+  .field input {
+    border: 1px solid rgba(0, 0, 0, 0.12);
+    box-sizing: border-box;
+    border-radius: 6px;
+    width: 100%;
+    height: 40px;
+    margin-top: 20px;
+    padding: 5px;
+    font-size: 15px;
+    background: #e4e9e8;
+  }
+  .field input:focus {
+    outline: none;
+  }
+  .field button {
+    width: 100%;
+    margin-top: 20px;
+    background: #008060;
+    border-radius: 25px;
+    color: #fff;
+    font-size: 20px;
+    padding: 9px;
+    border: none;
+    outline: none;
+  }
+  .field button>a{
+    text-decoration: none;
+    color: #fff;
+  }
+  .field button:hover {
+    cursor: pointer;
+  }
+  .field button:disabled {
+    cursor: not-allowed;
+  }
+  
   
